[package]
name = "seewo-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
hmac = "0.12"
md-5 = "0.10"
reqwest = {version = "0.11.14", default-features = false, features = ["rustls-tls","serde_json", "json", "multipart", "stream"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_qs = "0.10.1"
serde_with = "2.0.0"
smart-default = "0.6.0"
snafu = "0.7"
strfmt = "0.2.2"
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1.36"
url = "2.2.2"
maplit = "1.0"

[dev-dependencies]
tokio = { version = "1.20", features = ["full"] }
tracing-subscriber = "0.3.15"
